@@ -1,3 +1,8 @@
+2005-01-31  Mark McLoughlin  <mark@skynet.ie>
+
+	* lib/dirmonitor.py: fixup some bugs, passes unit
+	tests again.
+
 2005-01-29  Raphael Higino  <raphaelh@cvs.gnome.org>
 
 	* configure.ac: Added pt_BR to ALL_LINGUAS.
